Spacing Fix

--- a/css/HomeStyle.css
+++ b/css/HomeStyle.css
@@ -100,7 +100,7 @@ ul li:hover a {
 }
 
 .head {
-  height: 350px;
+  max-height: 350px;
 }
 
 .right {
@@ -111,6 +111,7 @@ ul li:hover a {
 
 .head-photo {
 	max-height: 350px;
+	max-width: 100%;
 }
 
 .left {
